# contentstack-api-client-rs

./: .commitlintrc.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release-plz.yml
docs/: contentstack-api.md  roadmap.md
src/: client.rs  error.rs  lib.rs  rate_limiter.rs
src/client/: config.rs  delivery.rs  entries.rs  environments.rs  management.rs  params.rs
src/client/delivery/: entries.rs
src/client/management/: entries.rs  environments.rs
src/middleware/: rate_limiter.rs
tests/: delivery_client.rs  error_handling.rs  management_client.rs
