[package]
name = "contentstack-api-client-rs"
version = "0.6.0"
edition = "2024"
rust-version = "1.93.1"
license = "MIT OR Apache-2.0"
description = "Async Rust client for the Contentstack CMS API, supporting both Delivery (CDN) and Management APIs with built-in rate limiting and streaming."
homepage = "https://github.com/vitorbarbosagoncalves/contentstack-api-client-rs"
repository = "https://github.com/vitorbarbosagoncalves/contentstack-api-client-rs"
readme = "README.md"

[dependencies]
async-trait = "0.1.89"
governor = "0.10.4"
http = "1.4.0"
reqwest = { version = "0.13.2", features = ["json", "query"] }
reqwest-middleware = { version = "0.5.1", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["sync", "macros", "rt-multi-thread"]}

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
wiremock = "0.6"
